[package]
name = "seven-zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
bitfield = "0.14"
byteorder = "1.5"
crc = "3.0"
either = "1.9"
num_enum = "0.7"
snafu = "0.7"

[features]
brotli = []

zstd = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
